--- a/VersaCraft Launcher/VersaCraft Launcher.csproj
+++ b/VersaCraft Launcher/VersaCraft Launcher.csproj
@@ -61,8 +61,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="StatusManager.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="ControlsManager.cs" />
     <Compile Include="UpdateManager.cs" />
+    <Compile Include="Win32.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
