--- a/VersaCraft Launcher/VersaCraft Launcher.csproj
+++ b/VersaCraft Launcher/VersaCraft Launcher.csproj
@@ -63,6 +63,7 @@
     </ApplicationDefinition>
     <Compile Include="Config.cs" />
     <Compile Include="ControlsManager.cs" />
+    <Compile Include="IniFile.cs" />
     <Compile Include="UpdateManager.cs" />
     <Compile Include="Win32.cs" />
     <Page Include="MainWindow.xaml">
