--- a/VersaCraft Launcher/VersaCraft Launcher.csproj
+++ b/VersaCraft Launcher/VersaCraft Launcher.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -64,6 +66,7 @@
     <Compile Include="Config.cs" />
     <Compile Include="ControlsManager.cs" />
     <Compile Include="IniFile.cs" />
+    <Compile Include="MinecraftLauncher.cs" />
     <Compile Include="UpdateManager.cs" />
     <Compile Include="Win32.cs" />
     <Page Include="MainWindow.xaml">
