better config validation, auth securing and other fixes

--- a/VersaCraft Launcher/VersaCraft Launcher.csproj
+++ b/VersaCraft Launcher/VersaCraft Launcher.csproj
@@ -84,6 +84,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Anticheat.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="ControlsManager.cs" />
     <Compile Include="FatalError.cs" />
